<package>
  <name>gici_messages</name>
  <version>1.0.0</version>
  <description>GICI ros wrapper</description>
  <license>BSD</license>
  <maintainer email="chichengcn@sjtu.edu.cn">Cheng Chi</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
</package>

